--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "meu-bot",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
+  "main": "bot.js",
   "scripts": {
+    "start": "node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,6 +14,7 @@
     "@distube/ytdl-core": "^4.16.12",
     "@tobyg74/tiktok-api-dl": "^1.3.4",
     "@whiskeysockets/baileys": "^6.7.19",
+    "@whiskeysockets/eslint-config": "git+https://github.com/whiskeysockets/eslint-config.git",
     "axios": "^1.11.0",
     "dotenv": "^17.2.2",
     "fb-downloader-scrapper": "^3.0.1",
