--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^17.2.2",
     "fb-downloader-scrapper": "^3.0.1",
     "fluent-ffmpeg": "^2.1.3",
+    "fs-extra": "^11.3.2",
     "instagram-url-direct": "^2.0.7",
     "jimp": "^0.16.1",
     "pg": "^8.16.3",
