--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   "dependencies": {
     "@distube/ytdl-core": "^4.16.12",
     "@tobyg74/tiktok-api-dl": "^1.3.4",
-    "@whiskeysockets/baileys": "^6.7.19",
+    "@whiskeysockets/baileys": "^7.0.0-rc.3",
     "axios": "^1.11.0",
+    "distube": "^5.0.7",
     "dotenv": "^17.2.2",
     "fb-downloader-scrapper": "^3.0.1",
     "fluent-ffmpeg": "^2.1.3",
     "fs-extra": "^11.3.2",
     "instagram-url-direct": "^2.0.7",
-    "jimp": "^0.16.1",
+    "jimp": "^0.16.13",
     "pg": "^8.16.3",
     "pino": "^9.9.4",
     "qrcode-terminal": "^0.12.0",
